<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ui.MainActivity"
    android:background="@drawable/main_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:paddingBottom="50dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/fname_label"
                android:textSize="@dimen/label_height"
                app:layout_constraintStart_toStartOf="@+id/fname_field"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textColor="@color/defTextColor"
                android:layout_marginTop="@dimen/item_margin" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fname_field"
                android:layout_width="@dimen/field_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/field_text_size"
                app:layout_constraintTop_toBottomOf="@id/fname_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/item_margin" />

            <TextView
                android:id="@+id/lname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/lname_label"
                android:textSize="@dimen/label_height"
                app:layout_constraintStart_toStartOf="@+id/lname_field"
                app:layout_constraintTop_toBottomOf="@id/fname_field"
                android:textStyle="bold"
                android:textColor="@color/defTextColor"
                android:layout_marginTop="@dimen/item_margin" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lname_field"
                android:layout_width="@dimen/field_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/field_text_size"
                app:layout_constraintTop_toBottomOf="@id/lname_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/item_margin" />

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/phone_label"
                android:textSize="@dimen/label_height"
                app:layout_constraintStart_toStartOf="@+id/phone_field"
                app:layout_constraintTop_toBottomOf="@id/lname_field"
                android:textStyle="bold"
                android:textColor="@color/defTextColor"
                android:layout_marginTop="@dimen/item_margin" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_field"
                android:layout_width="@dimen/field_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/field_text_size"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@id/phone_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/item_margin" />

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/address_label"
                android:textSize="@dimen/label_height"
                app:layout_constraintStart_toStartOf="@+id/address_field"
                app:layout_constraintTop_toBottomOf="@id/phone_field"
                android:textStyle="bold"
                android:textColor="@color/defTextColor"
                android:layout_marginTop="@dimen/item_margin" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/address_field"
                android:layout_width="@dimen/field_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/field_text_size"
                app:layout_constraintTop_toBottomOf="@id/address_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/item_margin" />

            <TextView
                android:id="@+id/restaurant_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/restaurant_label"
                android:textSize="@dimen/label_height"
                app:layout_constraintStart_toStartOf="@+id/restaurant_field"
                app:layout_constraintTop_toBottomOf="@id/address_field"
                android:textStyle="bold"
                android:textColor="@color/defTextColor"
                android:layout_marginTop="@dimen/item_margin" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/restaurant_field"
                android:layout_width="@dimen/field_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/field_text_size"
                app:layout_constraintTop_toBottomOf="@id/restaurant_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/item_margin" />

            <TextView
                android:id="@+id/request_by_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/request_by_label"
                android:textSize="@dimen/label_height"
                app:layout_constraintStart_toStartOf="@+id/request_by_field"
                app:layout_constraintTop_toBottomOf="@id/restaurant_field"
                android:textStyle="bold"
                android:textColor="@color/defTextColor"
                android:layout_marginTop="@dimen/item_margin" />

            <Spinner
                android:id="@+id/request_by_field"
                android:layout_width="@dimen/field_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/field_text_size"
                app:layout_constraintTop_toBottomOf="@id/request_by_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/item_margin" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/submit_btn"
        android:textSize="24sp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>